src/objects/Action_Plan_Root_Cause__c.object
<CustomObject>
    <description>This is junction object between Action Plan and Root Cause.</description>
    <fields>
        <fullName>Capa__c</fullName>
        <formula>Task_Action_Plan__r.Capa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <formula>Task_Action_Plan__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>General_Sub_Task__c</referenceTo>
        <relationshipLabel>Action Plans Root Causes</relationshipLabel>
        <relationshipName>Action_Plans_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Root_Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause</label>
        <referenceTo>General_Sub_Task__c</referenceTo>
        <relationshipLabel>Action Plans Root Causes (Root Cause)</relationshipLabel>
        <relationshipName>Action_Plans_Root_Causes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action Plan Root Cause</label>
    <nameField>
        <displayFormat>APRC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans Root Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>